# socd-cross

./: .gitattributes  README.md  index.html  package-lock.json  package.json
.github/workflows/: build_zip.sh  ci.yml
src/: App.tsx  constants.ts
src-tauri/: Cargo.toml  OverBind_conf.json  socd-cross-app-settings.json  socd-cross-conf.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: key_interceptor.rs  main.rs  windows_key_interceptor.rs
src/components/: Edit.tsx  InputTypeIcon.tsx
