[package]
name = "socd-cross"
version = "1.4.2"
description = "Bind keyboard buttons with SOCD Cleaning"
authors = ["arnabp", "cjonas1999", "AlexKnauth"]
license = ""
repository = "https://github.com/AlexKnauth/socd-cross"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "fs-all", "system-tray", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19.0"
rdev = { git = "https://github.com/AlexKnauth/rdev", branch = "set_is_main_thread", features = ["serialize"] }
tauri-plugin-window-state = "0.1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
